logs/brozzler.log
Listing '.'...
Listing './bin'...
Compiling './bin/createfontdatachunk.py'...
Compiling './bin/enhancer.py'...
Compiling './bin/explode.py'...
Compiling './bin/gifmaker.py'...
Compiling './bin/painter.py'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Compiling './bin/player.py'...
Compiling './bin/thresholder.py'...
Compiling './bin/viewer.py'...
Compiling './bin/wsdump.py'...
Listing './etc'...
Listing './etc/bash_completion.d'...
Listing './etc/fish'...
Listing './etc/fish/completions'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Cerberus-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-3.3.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/brozzler'...
Listing './lib/python3.5/site-packages/brozzler/dashboard'...
Compiling './lib/python3.5/site-packages/brozzler/dashboard/__init__.py'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/js'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/app'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/app/images'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/app/images/icons'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/app/locale'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/app/sounds'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/app/styles'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/core'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/core/input'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/docs'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/tests'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/utils'...
Compiling './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/utils/img2js.py'...
***   File "./lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/utils/img2js.py", line 14
    print "python PIL module required (python-imaging package)"
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/utils/json2graph.py'...
***   File "./lib/python3.5/site-packages/brozzler/dashboard/static/noVNC/utils/json2graph.py", line 16
    print "%s json_file level1 level2 level3 [legend_height]\n\n" % sys.argv[0]
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/brozzler/dashboard/static/partials'...
Listing './lib/python3.5/site-packages/brozzler/dashboard/templates'...
Listing './lib/python3.5/site-packages/brozzler/js-templates'...
Listing './lib/python3.5/site-packages/brozzler-1.1b11.egg-info'...
Listing './lib/python3.5/site-packages/cerberus'...
Listing './lib/python3.5/site-packages/cerberus/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/doublethink'...
Listing './lib/python3.5/site-packages/doublethink-0.2.0.dev87.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/publicsuffix'...
Listing './lib/python3.5/site-packages/publicsuffix-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/reppy'...
Listing './lib/python3.5/site-packages/reppy-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rethinkdb'...
Listing './lib/python3.5/site-packages/rethinkdb/asyncio_net'...
Listing './lib/python3.5/site-packages/rethinkdb/backports'...
Listing './lib/python3.5/site-packages/rethinkdb/backports/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/rethinkdb/gevent_net'...
Listing './lib/python3.5/site-packages/rethinkdb/tornado_net'...
Listing './lib/python3.5/site-packages/rethinkdb/twisted_net'...
Listing './lib/python3.5/site-packages/rethinkdb-2.3.0.post6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/url-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/urlcanon'...
Listing './lib/python3.5/site-packages/urlcanon-0.1.dev16.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/youtube_dl'...
Listing './lib/python3.5/site-packages/youtube_dl/downloader'...
Listing './lib/python3.5/site-packages/youtube_dl/extractor'...
Listing './lib/python3.5/site-packages/youtube_dl/postprocessor'...
Listing './lib/python3.5/site-packages/youtube_dl-2017.12.31.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/youtube_dl'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
